# Linia-do-paletyzacji-kostki---edge-box

./: .cproject  .project  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  eth.c  eth.h  hmi.c  hmi.h  http_server.c  http_server.h  io.c  io.h  logic.c  logic.h  main.c  tasks_common.h  tcp.c  tcp.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
